# DuetDesktopWeather

./: README.md  app-config.json  package-lock.json  package.json  vite.config.ts
scripts/: generate-cities.cjs
src/: app.css  app.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/data/: china-cascade.generated.ts  cities.generated.ts  cities.ts
